Used viewinflater to put form templates dynamically into second activity, transformed UniversityCourse into a Parcelable class so that objects can be passed from one activity to another.
Creating third summary output activity (probably a simple textview) and then passing object data to fourth activity which will show things on the calendar.

mprogress bar needs to be updated and exception throwing needs to be checked.

Google API only allows reading and writing data. Need code for a calendar display that provides a summary of study times that is preferably filterable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="main_welcome">Welcome to the App! And congrats for getting a headstart on planning your semester--first, put in your study preferences :)</string>
     <string name="enter_courses">Now, enter course information from your course syllabi.</string>
     <string name="submit_details">Submit Details</string>
+    <string name="summary">Overall Summary</string>
+    <string name="preview_calendar">Is this correct? Preview Calendar</string>
+    <string name="course_by_course">Course-by-Course Breakdown</string>
 </resources>
