Check error message and exceptions work well. The Parcelables pass data properly and the GUI also accepts data properly and can pass data successfully to activity 4. Also, kinks in calculate methods of UniversityCourse ironed out. Need to build Calendar Provider 4th and final activity with Google API linkage button.
mprogress bar needs to be updated and exception throwing needs to be checked.

Google API only allows reading and writing data. Need code for a calendar display that provides a summary of study times that is preferably filterable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="summary">Overall Summary</string>
     <string name="preview_calendar">Is this correct? Preview Calendar</string>
     <string name="course_by_course">Course-by-Course Breakdown</string>
+    <string name="import_GC">Import to Google Calendar</string>
 </resources>
