--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="preview_calendar">Is this correct? Preview Calendar</string>
     <string name="course_by_course">Course-by-Course Breakdown</string>
     <string name="import_GC">Import to Google Calendar</string>
+    <string name="do_not_import">Do not Import and Finish</string>
 </resources>
